--- a/ISAT/software.yaml
+++ b/ISAT/software.yaml
@@ -155,8 +155,9 @@ software:
   auto_save: false
   contour_mode: external
   create_mode_invisible_polygon: true
-  language: en
+  language: zh
   mask_alpha: 0.6
+  real_time_area: false
   show_edge: true
   show_prompt: true
   use_bfloat16: false
