重构: 修改图标生成逻辑，新增多个版本的图标文件，并更新图标资源文件的编译方式。同时将软件语言更改为英文。

--- a/ISAT/software.yaml
+++ b/ISAT/software.yaml
@@ -155,7 +155,7 @@ software:
   auto_save: false
   contour_mode: external
   create_mode_invisible_polygon: true
-  language: zh
+  language: en
   mask_alpha: 0.6
   real_time_area: false
   show_edge: true
